Santiago Velez Gutierrez k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
    tier: web
  ports:
    - name: http
      port: 80        # Puerto expuesto por el Service dentro del cluster
      targetPort: 80  # Puerto del contenedor
